--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -49,7 +49,7 @@
   <div id="contents">
     <img src="swords.gif" width="100%">
 
-    <h1>Ancient Spells[Lv.10]</h1><br><br><br>
+    <h1>Ancient Spells[Lv.11]</h1><br><br><br>
 
 
 
@@ -57,6 +57,23 @@
 
 
 
+
+
+    <a></a>
+    [정리하는 뇌 445p] 그렇다면 사람들도 자기가 멀티태스킹에 소질이 없음을 깨닫고 포기하지 않겠느냐는 생각이 들겠지만, 인지적 착각이 일어나서 그렇게 하지 못한다. 이는 부분적으로는 도파민-아드레날린 피드백 고리에 의해 부채질되는 측면이 있다. 그래서 멀티태스킹을 하는 사람은 자기가 일을 잘하고 있다고 생각한다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 444-445p] 우리는 모두 자기가 한번에 많은 일을 할 수 있고, 자기의 주의력은 무한하다고 믿고 싶어 하지만, 이것은 끈질기게 이어지는 미신에 불과하다. 우리가 실제로 하는 일은 주의를 하나의 과제에서 다른 과제로 신속하게 옮겨가는 것밖에 없다. 그 결과, 두 가지 나쁜 일이 일어난다. 우린느 어느 한 과제에도 충분히 주의를 기울이지 못한다. 그리고 어떤 과제든 거기에 쏟는 주의의 질이 감소한다. 우리가 어느 한 가지 일을 할 때는 뇌의 백일몽 네트워크에 이로운 변화가 일어나고 연결성이 좋아진다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 444p] 알고 보니 멀티태스킹을 하는 사람은 멀티태스킹의 모든 측면에서 형편없었다. 이들은 관련 없는 정보를 무시하는 일에 형편없다. 이들은 정보를 자기 머릿속에 깔끔하게 정리하는 일에도 형편없다. 그리고 하나의 과제에서 다른 과제로 전환하는 일에도 형편없다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 425p] 자기 자신의 상사가 되려면 상당한 자제력이 요구되지만, 그것을 감당할 수 있는 사람에게는 그 보상으로 막대한 생산성이 따라온다.
+    <br><br>
 
     <a></a>
     [정리하는 뇌 367p] 베이즈식 갱신: 자신의 특정 상황과 관련 있는 통계를 찾아서 활용해야 한다. 해당 차원에서 당신과 좀 더 밀접하게 닮은 사람들의 집합으로 문제를 국한시킴으로써 확률에 대한 추정을 개선할 수 있다. 예컨대, 여기서 중요한 질문은 "내가 뇌졸중에 걸릴 확률은 얼마인가?"가 아니라 "나와 나이, 성별, 혈압, 콜레스테롤 수치가 비슷한 사람이 뇌줄중에 걸릴 확률은 얼마인가?"가 되어야 한다. 이에 대답하기 위해서는 의료과학과 예술이 만나야 한다.
@@ -294,7 +311,7 @@
     <br><br>
 
     <a></a>
-    [정리하는 뇌 197-198p] 연인은 함께 있는 것에서 그치지 않고 그 이상의 친밀함을 추구한다. 이 친밀함은 사적인 행동, 개인적 생각, 기쁨, 상처, 그리고 상처받는 것에 대한 두려움 등을 공유하고 거기에 접근할 수 있도록 허용하는 것이라 정의할 수 있다. 친말함에는 서로 공유하는 의미를 만들어내는 것 또한 포함된다. 둘만이 이해할 수 있는 농담, 둘만이 이해할 수 있는 곁눈질 등 일종의 텔레파시라고도 할 수 있다. 여기에는 관계 속에서 온전한 자기 자신이 될 수 있고, 또 상대방도 그렇게 될 수 있도록 해주는 자유도 포함된다. 친밀감은 중요한 것을 터놓고 얘기하게 해주고, 감정적으로 격한 주제에 관해서도 조롱받거나 거부당하리라는 두려움 없이 분명하게 자기 입장을 취할 수 있게 해준다.
+    [정리하는 뇌 197-198p] 연인은 함께 있는 것에서 그치지 않고 그 이상의 친밀함을 추구한다. 이 친밀함은 사적인 행동, 개인적 생각, 기쁨, 상처, 그리고 상처받는 것에 대한 두려움 등을 공유하고 거기에 접근할 수 있도록 허용하는 것이라 정의할 수 있다. 친밀함에는 서로 공유하는 의미를 만들어내는 것 또한 포함된다. 둘만이 이해할 수 있는 농담, 둘만이 이해할 수 있는 곁눈질 등 일종의 텔레파시라고도 할 수 있다. 여기에는 관계 속에서 온전한 자기 자신이 될 수 있고, 또 상대방도 그렇게 될 수 있도록 해주는 자유도 포함된다. 친밀감은 중요한 것을 터놓고 얘기하게 해주고, 감정적으로 격한 주제에 관해서도 조롱받거나 거부당하리라는 두려움 없이 분명하게 자기 입장을 취할 수 있게 해준다.
     <br><br>
 
     <a></a>
