--- a/The_war_of_genesis.html
+++ b/The_war_of_genesis.html
@@ -63,7 +63,9 @@
 
 
 
+  <a>안드로이드 JAVA : 02. Java - 05. 메소드 (개념)</a><br>
 
+  <a>class101 자청 자동수익 강의 7-11</a><br>
 
   <a>안드로이드 JAVA : 02. Java - 04. 변수,자료형 (실습)</a><br>
 
